Refactor: extract duplicate store validation logic and use Collections.emptyList()
Co-authored-by: WinKyaw <10644607+WinKyaw@users.noreply.github.com>